--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 16 10:35:52 CST 2016
-sdk.dir=/Users/xiongcen/Documents/develop/android-sdk-macosx
+#Mon Jul 04 23:49:19 HKT 2016
+sdk.dir=/Users/xiongcen/Documents/Android_SDK/android-sdk-macosx
