自定义View 关于字体设置 http://blog.csdn.net/aigestudio/article/details/41447349

--- a/WaveViewDemo/src/main/AndroidManifest.xml
+++ b/WaveViewDemo/src/main/AndroidManifest.xml
@@ -20,7 +20,15 @@
             <!--</intent-filter>-->
         <!--</activity>-->
 
-        <activity android:name=".porter.PorterDuffXfermodeActivity">
+        <!--<activity android:name=".porter.PorterDuffXfermodeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>-->
+
+        <activity android:name=".font.FontActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
