ObjectAnimator的使用 规范代码

--- a/WaveViewDemo/src/main/AndroidManifest.xml
+++ b/WaveViewDemo/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             <!--</intent-filter>-->
         <!--</activity>-->
 
-        <activity android:name=".propertyanim.PropertyAnimActivity">
+        <activity android:name=".propertyanim.ObjectAnimActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
