使用xml文件来创建属性动画。注释标注注意事项： 1.设置xml的scale类型动画，valueType只能是floatType； 2.设置属性动画必须设置target

--- a/WaveViewDemo/src/main/AndroidManifest.xml
+++ b/WaveViewDemo/src/main/AndroidManifest.xml
@@ -52,7 +52,15 @@
             <!--</intent-filter>-->
         <!--</activity>-->
 
-        <activity android:name=".propertyanim.AnimatorSetActivity">
+        <!--<activity android:name=".propertyanim.AnimatorSetActivity">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
+
+        <activity android:name=".propertyanim.Xml4AnimActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
