mesh相关 分析：http://blog.csdn.net/leehong2005/article/details/9127095 代码下载地址：http://download.csdn.net/detail/yxj200624/7371453

--- a/WaveViewDemo/src/main/AndroidManifest.xml
+++ b/WaveViewDemo/src/main/AndroidManifest.xml
@@ -101,18 +101,26 @@
             <!--</intent-filter>-->
         <!--</activity>-->
 
-        <activity android:name=".circleimg.CircleActivity">
+        <!--<activity android:name=".circleimg.CircleActivity">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
+
+        <!--<activity android:name=".circleimg.Activity2">-->
+        <!--</activity>-->
+
+        <!--<activity android:name=".circleimg.Activity3">-->
+        <!--</activity>-->
+
+        <activity android:name=".mesh.MeshActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity android:name=".circleimg.Activity2">
-        </activity>
-
-        <activity android:name=".circleimg.Activity3">
         </activity>
     </application>
 
