--- a/WaveViewDemo/src/main/AndroidManifest.xml
+++ b/WaveViewDemo/src/main/AndroidManifest.xml
@@ -4,7 +4,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
+    <application
+        android:name=".BaseApplication"
+        android:allowBackup="true" android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme">
         <!--<activity android:name=".WaveViewActivity">-->
             <!--<intent-filter>-->
