2D平面中关于矩阵（Matrix）跟图形变换的讲解 http://blog.csdn.net/linmiansheng/article/details/18801947 Android中关于矩阵（Matrix）前乘后乘的一些认识 http://blog.csdn.net/linmiansheng/article/details/18820599

--- a/WaveViewDemo/src/main/AndroidManifest.xml
+++ b/WaveViewDemo/src/main/AndroidManifest.xml
@@ -134,7 +134,14 @@
             <!--</intent-filter>-->
         <!--</activity>-->
 
-        <activity android:name=".network.demo.MainActivity">
+        <!--<activity android:name=".network.demo.MainActivity">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
+        <activity android:name=".matrix.MatrixActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
