--- a/WaveViewDemo/src/main/AndroidManifest.xml
+++ b/WaveViewDemo/src/main/AndroidManifest.xml
@@ -141,7 +141,15 @@
                 <!--<category android:name="android.intent.category.LAUNCHER" />-->
             <!--</intent-filter>-->
         <!--</activity>-->
-        <activity android:name=".matrix.MatrixActivity">
+        <!--<activity android:name=".matrix.MatrixActivity">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
+
+        <activity android:name=".test.TestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
