Android 向右滑动销毁（finish）Activity, 随着手势的滑动而滑动的效果 http://blog.csdn.net/xiaanming/article/details/20934541

--- a/WaveViewDemo/src/main/AndroidManifest.xml
+++ b/WaveViewDemo/src/main/AndroidManifest.xml
@@ -149,13 +149,26 @@
             <!--</intent-filter>-->
         <!--</activity>-->
 
-        <activity android:name=".test.TestActivity">
+        <!--<activity android:name=".test.TestActivity">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
+
+        <activity android:name=".scroll.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".scroll.AbsActivity"/>
+        <activity android:name=".scroll.NormalActivity"/>
+        <activity android:name=".scroll.ScrollActivity"/>
+        <activity android:name=".scroll.ViewPagerActivity"/>
     </application>
 
 </manifest>
